Bucket B2 done
