# src/routes/userRouter.js
@@ -1,11 +1,13 @@
 // user router
 import express from 'express'
-import { registerUser, verifyOtp } from '../controller/user.js';
+import { getSignedProfile, registerUser, verifyOtp } from '../controller/user.js';
+import { upload } from '../utils/b2.js';
 
 const router=express.Router();
 
 router.post('/signup',registerUser);
-router.post('/verify-otp',verifyOtp);
+router.post("/verify-otp", upload.single("image"), verifyOtp);
+router.post("/get-profile-url", getSignedProfile);
 
 
 
